--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
       content="Create favicons using Font Awesome icons 🚀. Preview favicons live in browser 🖥️."
     />
     <title>Font Awesome Favicon Generator</title>
-    <script src="https://kit.fontawesome.com/a0a3988216.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/a0a3988216.js" crossorigin="anonymous"></script> -->
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous" /> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" />
   </head>
