--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
     <script src="https://kit.fontawesome.com/a0a3988216.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous" /> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" />
+    <script async defer data-website-id="62f5323e-dfde-4ecb-a2fb-ca86f2ac0ab1" src="https://umami.kierenconnell.com/umami.js"></script>
   </head>
   <body>
     <div id="left">
